--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -64,3 +64,18 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+
+
+header nav {
+    display: inline-block;
+	margin: 30px 0px;
+	width: 70%;
+}
+
+nav a {
+	margin: 3%;
+	width: 10%;
+	color: gray;
+	text-decoration: none;
+	
+}
