--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -65,17 +65,119 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 
+  * {
+	  text-decoration: none;
+	  text-align: center;
+	  
+	  
+  }
+  body {
+	  width: 1250px;
+	  
+  }
+  nav {
+	  display: inline-block;
+  }
+  header a {
+	  margin: 30px;
+	  color: gray;
+	  padding-top: 50px;
+  }
+  .logo {
+	  margin: 0 0 0 20px;
+	  
+  }
 
-header nav {
-    display: inline-block;
-	margin: 30px 0px;
-	width: 70%;
+  h1 {
+	  display: inline-block; 
+	  font-size: 70px;
+	  
+	  
+  }
+  .top-img {
+	 width: 27%;
+	 margin: 60px 0 0 170px;
+  }
+  .top-section {
+	  display: inline-block;
+	  vertical-align: top;
+	  margin: 100px 0 0 80px;
+  }
+  h4.button {
+	  border: 2px solid black;
+	  position: absolute;
+	  padding: 6px 30px;
+	  margin-left: 330px;
+	  margin-top: -80px;
+	  font-family: 'Courier New', Courier, monospace;
+	  
+  }
+
+ .mid-section {
+	  display: inline-block;
+	  width: 35%;
+	  margin-top: 30px;
+	  
+	  
+	}
+
+	.mid-section1 {
+		display: inline-block;
+		width: 35%;
+		margin-left: 50px;
+		margin-top: 30px;
+		
+	  }
+ 
+.middle-img {
+
+	width: 75%;
+	height: 150px;
+	margin-top: 30px;
+	
+	
+	
 }
 
-nav a {
-	margin: 3%;
-	width: 10%;
-	color: gray;
-	text-decoration: none;
+.bottom-section {
+	width: 24%;
+	display: inline-block;
+	margin: 30px 15px 0 0;
 	
+}
+
+.bottom-section1 {
+	width: 24%;
+	display: inline-block;
+	margin: 30px 15px 0 0;
+	
+	
+	
+}
+
+.bottom-section2 {
+	width: 24%;
+	display: inline-block;
+	margin: 30px 0 0 0;
+	
+}
+
+.line {
+	
+   margin-top: 40px;
+   width: 75%;
+   text-align: center;
+   border: 1px solid black
+}
+
+.footer {
+	width: 35%
+    
+}
+h6 {
+	text-align: center;
+	
+}
+h4 {
+	text-align: left;
 }
